# jlhphd

./: .gitignore  01_minimization_thermo.out  02_minimization_thermo.out  02_nvtEquilibration_thermo.out  03_nptEquilibration_thermo.out  03_nvtEquilibration_thermo.out  04_nptEquilibration_thermo.out  05_100ps_nptProduction_thermo.out  05_10ps_nptProduction_thermo.out  05_nptProduction_thermo.out  1_SDS_on_AU_100_1x4x4_100ps_npt_nptProduction_thermo.out  1_SDS_on_AU_100_1x4x4_10ps_npt_final_config.lammps  1_SDS_on_AU_100_1x4x4_10ps_npt_nptProduction_thermo.out  1_SDS_on_AU_100_1x4x4_minimized.lammps  1_SDS_on_AU_100_1x4x4_nptEquilibrated.lammps  1_SDS_on_AU_100_1x4x4_nvtEquilibrated.lammps  1_SDS_on_AU_100_1x4x4_psfgen.data  1_SDS_on_AU_100_2x4x4_100ps_npt_final_config.lammps  1_SDS_on_AU_100_2x4x4_100ps_npt_nptProduction_thermo.out  1_SDS_on_AU_100_2x4x4_10ps_npt_final_config.lammps  1_SDS_on_AU_100_2x4x4_10ps_npt_nptProduction_thermo.out  1_SDS_on_AU_100_2x4x4_1ns_npt_final_config.lammps  1_SDS_on_AU_100_2x4x4_1ns_npt_nptProduction_thermo.out  1_SDS_on_AU_100_2x4x4_charmmfsw_long_10_12.input  1_SDS_on_AU_100_2x4x4_charmmfsw_long_10_12_100ps.input  1_SDS_on_AU_100_2x4x4_charmmfsw_long_10_12_100ps_nveProduction_thermo.out  1_SDS_on_AU_100_2x4x4_charmmfsw_long_10_12_10ps.input  1_SDS_on_AU_100_2x4x4_charmmfsw_long_10_12_10ps_diffusivities.out  1_SDS_on_AU_100_2x4x4_charmmfsw_long_10_12_10ps_final_config.lammps  1_SDS_on_AU_100_2x4x4_charmmfsw_long_10_12_10ps_moleculeProperties.out  1_SDS_on_AU_100_2x4x4_charmmfsw_long_10_12_10ps_npt.input  (+85 more)
bash/: gmx2pdb.sh  gmx_solvate.sh  (+1 more)
(+978 files in other folders)
