[build-system]
requires = ["setuptools>=42", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jlhpy"
description = "Nanotribology of surfactants"
readme = "README.md"
requires-python = ">=3.6.5"
license = { text = "MIT" }
authors = [
    { name = "Johannes Hörmann", email = "johannes.hoermann@imtek.uni-freiburg.de" }
]
urls = { "Homepage" = "https://github.com/jotelha/jlhphd" }
dependencies = [
    "fireworks>=1.9.5"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jlhpy"]
exclude = []

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
write_to = "jlhpy/version.py"
